agregado de la config de intellij en NoMeLeas