@@ -1,1 +1,9 @@
 Proyecto de tesina, para segundo año, donde se desarrollara un sistema para reservas.
+
+config de vm para el run config
+
+--module-path /home/nahue/javafx-sdk-17.0.19/lib --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.base
+
+Y con el Proyect Structure, hay que poner la ruta donde está el java fx, y luego elegir todos los .jar para que funcione.
+
+
